--- a/Tasksheet.html
+++ b/Tasksheet.html
@@ -168,12 +168,7 @@
             "Northmeads Flats 2", "Fields Works"
         ];
 
-        const employees = [
-            "BRIGHTON MATOLOKOSH", "CAPHAS TEMBO", "CLISHA MAMBILIMA", "DABSON DAKA", 
-            "DANNY MVULA", "JAMES DAKA", "JOSEPH TEMBO", "LUCKSON PHIRI", "MICHEAL LOBELA", 
-            "OBERT SIAME", "DOMINIC SAKALA", "PETER MAWERE", "SAVIOUR PHIRI", 
-            "TEMBEYA SAKALA", "KEVIN SIAME"
-        ];
+        let tasks = [];
 
         // Load tasks from Firebase
         function loadTasks() {
@@ -181,6 +176,7 @@
             onValue(tasksRef, (snapshot) => {
                 const data = snapshot.val();
                 tasks = data ? Object.values(data) : [];
+                console.log("Tasks loaded from Firebase:", tasks); // Debugging
                 updateTable();
             });
         }
@@ -189,19 +185,21 @@
         function saveTask(task) {
             const tasksRef = ref(db, 'tasks/');
             const newTaskRef = push(tasksRef);
-            set(newTaskRef, task);
+            set(newTaskRef, task).then(() => {
+                console.log("Task saved to Firebase:", task); // Debugging
+            }).catch((error) => {
+                console.error("Error saving task to Firebase:", error); // Debugging
+            });
         }
 
-        // Update tasks and completed tasks in Firebase
+        // Update tasks in Firebase
         function updateTask(task, taskKey) {
             const taskRef = ref(db, `tasks/${taskKey}`);
-            update(taskRef, task);
-        }
-
-        // Remove completed tasks from Firebase
-        function removeCompletedTask(taskKey) {
-            const taskRef = ref(db, `tasks/${taskKey}`);
-            remove(taskRef);
+            update(taskRef, task).then(() => {
+                console.log("Task updated in Firebase:", task); // Debugging
+            }).catch((error) => {
+                console.error("Error updating task in Firebase:", error); // Debugging
+            });
         }
 
         // Event listeners for adding tasks and closing the modal
@@ -297,7 +295,6 @@
                         task.endDate = new Date().toLocaleDateString();
                         task.status = 'Completed';
                         updateTask(task, index);
-                        removeCompletedTask(index);
                         updateTable();
                     });
 
