--- a/Tool.html
+++ b/Tool.html
@@ -131,6 +131,177 @@
             font-size: 14px;
         }
     </style>
+    <!-- Add Firebase SDK -->
+    <script type="module">
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.17.1/firebase-app.js";
+        import { getDatabase, ref, push, set, onValue, update } from "https://www.gstatic.com/firebasejs/9.17.1/firebase-database.js";
+
+        // Firebase configuration
+        const firebaseConfig = {
+            apiKey: "AIzaSyCFGX-J09YjbCe_u58yexo7Eg6VqWwPje0",
+            authDomain: "project-management-a1c5e.firebaseapp.com",
+            databaseURL: "https://project-management-a1c5e-default-rtdb.firebaseio.com/",
+            projectId: "project-management-a1c5e",
+            storageBucket: "project-management-a1c5e.appspot.com",
+            messagingSenderId: "662718236281",
+            appId: "1:662718236281:web:e859b39671aefa67e436a8",
+        };
+
+        // Initialize Firebase
+        const app = initializeApp(firebaseConfig);
+        const db = getDatabase(app);
+
+        // Get DOM elements
+        const toolTable = document.getElementById('toolTable').getElementsByTagName('tbody')[0];
+        const searchInput = document.querySelector('.search-input');
+        const assignForm = document.getElementById('assignForm');
+        const assignToolForm = document.getElementById('assignToolForm');
+        const pagination = document.querySelector('.pagination');
+        const pageInfo = document.getElementById('pageInfo');
+
+        let tools = [];
+        let currentPage = 1;
+        const rowsPerPage = 10;
+
+        // Load tools from Firebase
+        function loadTools() {
+            const toolsRef = ref(db, 'tools/');
+            onValue(toolsRef, (snapshot) => {
+                const data = snapshot.val();
+                tools = data ? Object.values(data) : [];
+                updateTable();
+                updatePagination();
+            });
+        }
+
+        // Save tool assignment to Firebase
+        function saveToolAssignment(tool) {
+            const toolsRef = ref(db, 'tools/');
+            const newToolRef = push(toolsRef);
+            set(newToolRef, tool).then(() => {
+                console.log("Tool assignment saved to Firebase:", tool);
+            }).catch((error) => {
+                console.error("Error saving tool assignment to Firebase:", error);
+            });
+        }
+
+        // Update tool assignment in Firebase
+        function updateToolAssignment(tool, toolKey) {
+            const toolRef = ref(db, `tools/${toolKey}`);
+            update(toolRef, tool).then(() => {
+                console.log("Tool assignment updated in Firebase:", tool);
+            }).catch((error) => {
+                console.error("Error updating tool assignment in Firebase:", error);
+            });
+        }
+
+        // Filter table based on search input
+        function filterTable() {
+            const filter = searchInput.value.toLowerCase();
+            const rows = toolTable.getElementsByTagName('tr');
+
+            for (let i = 1; i < rows.length; i++) {
+                const cells = rows[i].getElementsByTagName('td');
+                let match = false;
+
+                for (let j = 0; j < cells.length; j++) {
+                    if (cells[j].textContent.toLowerCase().includes(filter)) {
+                        match = true;
+                        break;
+                    }
+                }
+
+                rows[i].style.display = match ? '' : 'none';
+            }
+        }
+
+        // Show or hide the assignment form
+        function showForm() {
+            assignForm.style.display = assignForm.style.display === 'block' ? 'none' : 'block';
+        }
+
+        // Handle tool assignment form submission
+        function assignTool(event) {
+            event.preventDefault();
+
+            const employeeName = document.getElementById('employeeName').value;
+            const projectName = document.getElementById('projectName').value;
+            const toolName = document.getElementById('toolName').value;
+            const assignedDate = new Date().toLocaleDateString();
+
+            const tool = {
+                toolName,
+                currentHolder: employeeName,
+                currentLocation: projectName,
+                assignedDate
+            };
+
+            saveToolAssignment(tool);
+            showForm();
+        }
+
+        // Update the tool table
+        function updateTable() {
+            toolTable.innerHTML = ''; // Clear the table
+
+            const start = (currentPage - 1) * rowsPerPage;
+            const end = start + rowsPerPage;
+            const paginatedTools = tools.slice(start, end);
+
+            paginatedTools.forEach((tool, index) => {
+                const row = toolTable.insertRow();
+                row.insertCell(0).innerText = start + index + 1;
+                row.insertCell(1).innerText = tool.toolName;
+                row.insertCell(2).innerText = tool.currentHolder;
+                row.insertCell(3).innerText = tool.currentLocation;
+                row.insertCell(4).innerText = tool.assignedDate;
+            });
+        }
+
+        // Update pagination controls
+        function updatePagination() {
+            const totalPages = Math.ceil(tools.length / rowsPerPage);
+            pageInfo.innerText = `Page ${currentPage} of ${totalPages}`;
+
+            if (currentPage > 1) {
+                pagination.querySelector('button[onclick="previousPage()"]').disabled = false;
+            } else {
+                pagination.querySelector('button[onclick="previousPage()"]').disabled = true;
+            }
+
+            if (currentPage < totalPages) {
+                pagination.querySelector('button[onclick="nextPage()"]').disabled = false;
+            } else {
+                pagination.querySelector('button[onclick="nextPage()"]').disabled = true;
+            }
+        }
+
+        // Go to the previous page
+        function previousPage() {
+            if (currentPage > 1) {
+                currentPage--;
+                updateTable();
+                updatePagination();
+            }
+        }
+
+        // Go to the next page
+        function nextPage() {
+            const totalPages = Math.ceil(tools.length / rowsPerPage);
+            if (currentPage < totalPages) {
+                currentPage++;
+                updateTable();
+                updatePagination();
+            }
+        }
+
+        // Event listeners
+        searchInput.addEventListener('input', filterTable);
+        assignToolForm.addEventListener('submit', assignTool);
+
+        // Initial load of tools from Firebase
+        loadTools();
+    </script>
 </head>
 <body>
 
@@ -144,7 +315,7 @@
 
     <div class="form-container" id="assignForm">
         <h2>Assign Tool</h2>
-        <form id="assignToolForm" onsubmit="assignTool(event)">
+        <form id="assignToolForm">
             <label for="employeeName">Employee Name:</label>
             <select id="employeeName" name="employeeName" required>
                 <option value="Brighton Matolokosh">Brighton Matolokosh</option>
@@ -190,105 +361,7 @@
             </tr>
         </thead>
         <tbody>
-            <tr>
-                <td>001</td>
-                <td>GRINDER</td>
-                <td>John Doe</td>
-                <td>Workshop A</td>
-                <td>2023-01-10</td>
-            </tr>
-            <tr>
-                <td>002</td>
-                <td>HAND SAW</td>
-                <td>Jane Smith</td>
-                <td>Storage Room</td>
-                <td>2023-05-20</td>
-            </tr>
-            <tr>
-                <td>003</td>
-                <td>WELDING SHIELD</td>
-                <td>Mike Johnson</td>
-                <td>Workshop B</td>
-                <td>2022-11-15</td>
-            </tr>
-            <!-- Add additional tool rows here -->
-            <tr>
-                <td>004</td>
-                <td>WELDING SQUARE</td>
-                <td>Emily Davis</td>
-                <td>Workshop C</td>
-                <td>2024-01-11</td>
-            </tr>
-            <tr>
-                <td>005</td>
-                <td>COMBINATION SQUARE</td>
-                <td>Alex Green</td>
-                <td>Workshop C</td>
-                <td>2024-01-11</td>
-            </tr>
-            <tr>
-                <td>006</td>
-                <td>SANDING MACHINE</td>
-                <td>Lisa Brown</td>
-                <td>Workshop D</td>
-                <td>2024-01-11</td>
-            </tr>
-            <tr>
-                <td>007</td>
-                <td>STAPLE GUN</td>
-                <td>James White</td>
-                <td>Storage Room</td>
-                <td>2024-01-11</td>
-            </tr>
-            <tr>
-                <td>008</td>
-                <td>TENAN SAW</td>
-                <td>Michael Black</td>
-                <td>Workshop B</td>
-                <td>2024-01-11</td>
-            </tr>
-            <tr>
-                <td>009</td>
-                <td>CIRCULAR SAW</td>
-                <td>Susan Blue</td>
-                <td>Workshop A</td>
-                <td>2024-01-11</td>
-            </tr>
-            <tr>
-                <td>010</td>
-                <td>JIK SAW</td>
-                <td>David Gray</td>
-                <td>Workshop D</td>
-                <td>2024-01-11</td>
-            </tr>
-            <tr>
-                <td>011</td>
-                <td>MEASURING TAPE</td>
-                <td>Patricia Orange</td>
-                <td>Storage Room</td>
-                <td>2024-01-11</td>
-            </tr>
-            <tr>
-                <td>012</td>
-                <td>PLANE</td>
-                <td>Richard Yellow</td>
-                <td>Workshop A</td>
-                <td>2024-01-11</td>
-            </tr>
-            <tr>
-                <td>013</td>
-                <td>CROW BAR</td>
-                <td>Jessica Purple</td>
-                <td>Workshop C</td>
-                <td>2024-01-11</td>
-            </tr>
-            <tr>
-                <td>014</td>
-                <td>BABY GRINDER</td>
-                <td>Tom Pink</td>
-                <td>Workshop B</td>
-                <td>2024-01-11</td>
-            </tr>
+            <!-- Tool rows will be dynamically added here -->
         </tbody>
     </table>
 
@@ -297,66 +370,6 @@
         <span id="pageInfo">Page 1 of 1</span>
         <button onclick="nextPage()">Next</button>
     </div>
-
-    <script>
-        const rowsPerPage = 10;
-        let currentPage = 1;
-
-        function filterTable() {
-            const input = document.querySelector('.search-input');
-            const filter = input.value.toLowerCase();
-            const table = document.getElementById('toolTable');
-            const rows = table.getElementsByTagName('tr');
-
-            for (let i = 1; i < rows.length; i++) {
-                const cells = rows[i].getElementsByTagName('td');
-                let match = false;
-
-                for (let j = 0; j < cells.length; j++) {
-                    if (cells[j].textContent.toLowerCase().includes(filter)) {
-                        match = true;
-                        break;
-                    }
-                }
-
-                rows[i].style.display = match ? '' : 'none';
-            }
-        }
-
-        function showForm() {
-            const form = document.getElementById('assignForm');
-            form.style.display = form.style.display === 'block' ? 'none' : 'block';
-        }
-
-        function assignTool(event) {
-            event.preventDefault();
-
-            const employeeName = document.getElementById('employeeName').value;
-            const projectName = document.getElementById('projectName').value;
-            const toolName = document.getElementById('toolName').value;
-            const assignedDate = new Date().toLocaleDateString();
-
-            const table = document.getElementById('toolTable');
-            const rows = table.getElementsByTagName('tr');
-
-            for (let i = 1; i < rows.length; i++) {
-                const cells = rows[i].getElementsByTagName('td');
-                const toolCell = cells[1];
-                const currentHolderCell = cells[2];
-                const currentLocationCell = cells[3];
-                const assignedDateCell = cells[4];
-
-                if (toolCell.textContent === toolName) {
-                    currentHolderCell.textContent = employeeName;
-                    currentLocationCell.textContent = projectName;
-                    assignedDateCell.textContent = assignedDate;
-                    break;
-                }
-            }
-
-            showForm();
-        }
-    </script>
 
 </body>
 </html>
