--- a/purchases.html
+++ b/purchases.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -138,63 +138,187 @@
             cursor: pointer;
         }
     </style>
+    <!-- Add Firebase SDK -->
+    <script type="module">
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.17.1/firebase-app.js";
+        import { getDatabase, ref, push, set, onValue } from "https://www.gstatic.com/firebasejs/9.17.1/firebase-database.js";
+
+        // Firebase configuration
+        const firebaseConfig = {
+            apiKey: "AIzaSyCFGX-J09YjbCe_u58yexo7Eg6VqWwPje0",
+            authDomain: "project-management-a1c5e.firebaseapp.com",
+            databaseURL: "https://project-management-a1c5e-default-rtdb.firebaseio.com/",
+            projectId: "project-management-a1c5e",
+            storageBucket: "project-management-a1c5e.appspot.com",
+            messagingSenderId: "662718236281",
+            appId: "1:662718236281:web:e859b39671aefa67e436a8",
+        };
+
+        // Initialize Firebase
+        const app = initializeApp(firebaseConfig);
+        const db = getDatabase(app);
+
+        // Get elements from the DOM
+        const costingForm = document.getElementById('costingForm');
+        const costingTableBody = document.getElementById('costingTableBody');
+        const totalPurchases = document.getElementById('totalPurchases');
+        const taskSelect = document.getElementById('taskSelect');
+        const taskSpending = document.getElementById('taskSpending');
+        const toggleFormBtn = document.getElementById('toggleFormBtn');
+        const addRowBtn = document.getElementById('addRowBtn');
+
+        let purchases = [];
+
+        // Load purchases from Firebase
+        function loadPurchases() {
+            const purchasesRef = ref(db, 'purchases/');
+            onValue(purchasesRef, (snapshot) => {
+                const data = snapshot.val();
+                purchases = data ? Object.values(data) : [];
+                updateTable();
+                updateTaskSelect();
+                updateTotalPurchases();
+            });
+        }
+
+        // Save purchase to Firebase
+        function savePurchase(purchase) {
+            const purchasesRef = ref(db, 'purchases/');
+            const newPurchaseRef = push(purchasesRef);
+            set(newPurchaseRef, purchase).then(() => {
+                console.log("Purchase saved to Firebase:", purchase);
+            }).catch((error) => {
+                console.error("Error saving purchase to Firebase:", error);
+            });
+        }
+
+        // Toggle the form visibility
+        toggleFormBtn.addEventListener('click', () => {
+            costingForm.style.display = costingForm.style.display === 'block' ? 'none' : 'block';
+        });
+
+        // Handle form submission
+        addRowBtn.addEventListener('click', (event) => {
+            event.preventDefault();
+
+            const date = document.getElementById('date').value;
+            const particular = document.getElementById('particular').value;
+            const task = document.getElementById('task').value;
+            const supplier = document.getElementById('supplier').value;
+            const vat = document.getElementById('vat').value;
+            const project = document.getElementById('project').value;
+            const payee = document.getElementById('payee').value;
+            const qty = parseInt(document.getElementById('qty').value);
+            const amount = parseFloat(document.getElementById('amount').value);
+            const total = qty * amount;
+
+            const purchase = {
+                date,
+                particular,
+                task,
+                supplier,
+                vat,
+                project,
+                payee,
+                qty,
+                amount,
+                total
+            };
+
+            savePurchase(purchase);
+            costingForm.reset();
+            costingForm.style.display = 'none';
+        });
+
+        // Update the table with purchases
+        function updateTable() {
+            costingTableBody.innerHTML = ''; // Clear the table
+
+            purchases.forEach((purchase) => {
+                const row = costingTableBody.insertRow();
+                row.insertCell(0).innerText = purchase.date;
+                row.insertCell(1).innerText = purchase.project;
+                row.insertCell(2).innerText = purchase.particular;
+                row.insertCell(3).innerText = purchase.task;
+                row.insertCell(4).innerText = purchase.supplier;
+                row.insertCell(5).innerText = purchase.vat;
+                row.insertCell(6).innerText = purchase.payee;
+                row.insertCell(7).innerText = purchase.qty;
+                row.insertCell(8).innerText = purchase.amount;
+                row.insertCell(9).innerText = purchase.total;
+            });
+        }
+
+        // Update the task select options
+        function updateTaskSelect() {
+            const tasks = [...new Set(purchases.map(purchase => purchase.task))];
+            taskSelect.innerHTML = '<option value="">--Select Task--</option>';
+            tasks.forEach(task => {
+                const option = document.createElement('option');
+                option.value = task;
+                option.innerText = task;
+                taskSelect.appendChild(option);
+            });
+        }
+
+        // Update the total purchases
+        function updateTotalPurchases() {
+            const total = purchases.reduce((acc, purchase) => acc + purchase.total, 0);
+            totalPurchases.innerText = `ZMW ${total.toFixed(2)}`;
+        }
+
+        // Event listener for task select change
+        taskSelect.addEventListener('change', (event) => {
+            const selectedTask = event.target.value;
+            const taskTotal = purchases
+                .filter(purchase => purchase.task === selectedTask)
+                .reduce((acc, purchase) => acc + purchase.total, 0);
+            taskSpending.innerText = `Total for ${selectedTask}: ZMW ${taskTotal.toFixed(2)}`;
+        });
+
+        // Initial load of purchases from Firebase
+        loadPurchases();
+    </script>
 </head>
 <body>
     <div class="container">
         <h1>Purchases</h1>
-
-        <!-- Row of buttons -->
         <div class="button-row">
-            <li><a href="Projectcosting.html"><i class="fas fa-sign-out-alt"></i><button id="projectCostingBtn">Project Costing</button> </a></li>
+            <li><a href="Projectcosting.html"><button id="projectCostingBtn">Project Costing</button></a></li>
             <button id="toggleFormBtn">Add New Entry</button>
-            <button id="archiveBtn">Archive Monthly Purchases</button> <!-- Archive button -->
+            <button id="archiveBtn">Archive Monthly Purchases</button>
         </div>
-
-        <!-- Hidden form -->
-        <form id="costingForm">
+        <form id="costingForm" style="display:none;">
             <label>Date:</label>
             <input type="date" id="date" required>
-
             <label>Particular:</label>
             <input type="text" id="particular" placeholder="e.g., Solar light" required>
-
             <label>Task:</label>
             <input type="text" id="task" placeholder="e.g., front yard light" required>
-
             <label>Supplier:</label>
             <input type="text" id="supplier" placeholder="e.g., Hardware Electricals" required>
-
             <label>VAT:</label>
             <select id="vat">
                 <option value="No">No</option>
                 <option value="Yes">Yes</option>
             </select>
-
             <label>Project:</label>
             <input type="text" id="project" placeholder="e.g., HAZIDA LIMITED" required>
-
             <label>Payee:</label>
             <input type="text" id="payee" placeholder="e.g., HAZIDA LIMITED" required>
-
             <label>Quantity:</label>
             <input type="number" id="qty" placeholder="Enter quantity" required>
-
             <label>Amount (per item):</label>
             <input type="number" id="amount" placeholder="Enter amount" required>
-
             <div class="actions">
                 <button type="button" id="addRowBtn">Add Entry</button>
             </div>
         </form>
-
-        <!-- Total Purchases Display -->
         <div class="total-purchases">
             <i class="fas fa-dollar-sign"></i>
             Total Purchases: 
             <span id="totalPurchases">ZMW 0.00</span>
         </div>
-
-        <!-- Task-specific total spending -->
         <div class="task-total">
             <label for="taskSelect">Select Task to View Total:</label>
             <select id="taskSelect">
@@ -202,8 +326,6 @@
             </select>
             <div id="taskSpending"></div>
         </div>
-
-        <!-- Table for displaying costing -->
         <table>
             <thead>
                 <tr>
@@ -224,185 +346,5 @@
             </tbody>
         </table>
     </div>
-
-    <!-- Modal for choosing month -->
-    <div id="monthModal" class="modal">
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <h2>Choose Month to Archive</h2>
-            <label for="archiveMonth">Select Month:</label>
-            <select id="archiveMonth">
-                <option value="">--Select Month--</option>
-                <option value="January">January</option>
-                <option value="February">February</option>
-                <option value="March">March</option>
-                <option value="April">April</option>
-                <option value="May">May</option>
-                <option value="June">June</option>
-                <option value="July">July</option>
-                <option value="August">August</option>
-                <option value="September">September</option>
-                <option value="October">October</option>
-                <option value="November">November</option>
-                <option value="December">December</option>
-            </select>
-            <input type="number" id="archiveYear" placeholder="Enter Year (e.g. 2025)" required>
-            <button id="archiveMonthBtn">Archive</button>
-        </div>
-    </div>
-
-    <!-- Include jsPDF Library -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-
-    <script>
-        const { jsPDF } = window.jspdf;
-        const form = document.getElementById('costingForm');
-        const toggleFormBtn = document.getElementById('toggleFormBtn');
-        const archiveBtn = document.getElementById('archiveBtn');
-        const totalPurchasesDisplay = document.getElementById('totalPurchases');
-        const taskSelect = document.getElementById('taskSelect');
-        const taskSpending = document.getElementById('taskSpending');
-        const monthModal = document.getElementById('monthModal');
-        const closeModal = document.getElementsByClassName('close')[0];
-        const archiveMonthSelect = document.getElementById('archiveMonth');
-        const archiveYearInput = document.getElementById('archiveYear');
-        const archiveMonthBtn = document.getElementById('archiveMonthBtn');
-        let totalPurchases = 0;
-        let taskTotals = {}; // Object to store totals per task
-
-        // Toggle form visibility
-        toggleFormBtn.addEventListener('click', () => {
-            if (form.style.display === 'none' || form.style.display === '') {
-                form.style.display = 'block';
-                toggleFormBtn.textContent = 'Hide Form';
-            } else {
-                form.style.display = 'none';
-                toggleFormBtn.textContent = 'Add New Entry';
-            }
-        });
-
-        // Handle "Archive Monthly Purchases" button click
-        archiveBtn.addEventListener('click', () => {
-            monthModal.style.display = "block"; // Show modal to select month
-        });
-
-        // Close modal
-        closeModal.addEventListener('click', () => {
-            monthModal.style.display = "none"; // Close modal
-        });
-
-        // Archive month selection and generate PDF
-        archiveMonthBtn.addEventListener('click', () => {
-            const selectedMonth = archiveMonthSelect.value;
-            const selectedYear = archiveYearInput.value;
-            if (selectedMonth && selectedYear) {
-                const doc = new jsPDF('landscape', 'mm', 'a4'); // Use 'mm' and 'a4' for better scaling
-
-                // Set margins to ensure content fits on the page
-                const margin = 10;
-                doc.setPage(1);
-                doc.setFontSize(18);
-                doc.text(`Monthly Purchases for ${selectedMonth}${selectedYear}`, margin, 20);
-
-                // Table headers with adjusted positions
-                const headerY = 30;
-                doc.setFontSize(10);
-                doc.text('DATE', margin + 0, headerY);
-                doc.text('PROJECT NAME', margin + 30, headerY);
-                doc.text('PARTICULAR', margin + 60, headerY);
-                doc.text('TASK', margin + 90, headerY);
-                doc.text('SUPPLIER', margin + 120, headerY);
-                doc.text('VAT', margin + 160, headerY);
-                doc.text('PAYEE', margin + 180, headerY);
-                doc.text('QTY', margin + 220, headerY);
-                doc.text('AMOUNT', margin + 240, headerY);
-                doc.text('TOTAL', margin + 270, headerY);
-
-                // Add table rows
-                let yOffset = 40;
-                const tableRows = document.querySelectorAll('#costingTableBody tr');
-                tableRows.forEach(row => {
-                    const cells = row.querySelectorAll('td');
-                    doc.text(cells[0].textContent, margin + 0, yOffset);
-                    doc.text(cells[1].textContent, margin + 30, yOffset);
-                    doc.text(cells[2].textContent, margin + 60, yOffset);
-                    doc.text(cells[3].textContent, margin + 90, yOffset);
-                    doc.text(cells[4].textContent, margin + 120, yOffset);
-                    doc.text(cells[5].textContent, margin + 160, yOffset);
-                    doc.text(cells[6].textContent, margin + 180, yOffset);
-                    doc.text(cells[7].textContent, margin + 220, yOffset);
-                    doc.text(cells[8].textContent, margin + 240, yOffset);
-                    doc.text(cells[9].textContent, margin + 270, yOffset);
-                    yOffset += 10;
-                });
-
-                // Save PDF
-                doc.save(`Purchases_${selectedMonth}_${selectedYear}.pdf`);
-
-                // Close modal
-                monthModal.style.display = "none";
-            } else {
-                alert('Please select a valid month and year');
-            }
-        });
-
-        // Function to add a row to the table
-        document.getElementById('addRowBtn').addEventListener('click', () => {
-            const date = document.getElementById('date').value;
-            const particular = document.getElementById('particular').value;
-            const task = document.getElementById('task').value;
-            const supplier = document.getElementById('supplier').value;
-            const vat = document.getElementById('vat').value;
-            const project = document.getElementById('project').value;
-            const payee = document.getElementById('payee').value;
-            const qty = parseFloat(document.getElementById('qty').value);
-            const amount = parseFloat(document.getElementById('amount').value);
-            const total = qty * amount;
-
-            if (date && particular && task && supplier && vat && project && payee && qty && amount) {
-                // Add row to table
-                const tableBody = document.getElementById('costingTableBody');
-                const row = tableBody.insertRow();
-
-                row.insertCell(0).textContent = date;
-                row.insertCell(1).textContent = project;
-                row.insertCell(2).textContent = particular;
-                row.insertCell(3).textContent = task;
-                row.insertCell(4).textContent = supplier;
-                row.insertCell(5).textContent = vat;
-                row.insertCell(6).textContent = payee;
-                row.insertCell(7).textContent = qty;
-                row.insertCell(8).textContent = amount;
-                row.insertCell(9).textContent = total.toFixed(2);
-
-                // Update task totals
-                if (!taskTotals[task]) taskTotals[task] = 0;
-                taskTotals[task] += total;
-
-                // Update task select dropdown
-                let option = new Option(task, task);
-                taskSelect.appendChild(option);
-
-                // Update total purchases
-                totalPurchases += total;
-                totalPurchasesDisplay.textContent = `ZMW ${totalPurchases.toFixed(2)}`;
-
-                // Clear the form inputs
-                form.reset();
-            } else {
-                alert('Please fill in all the fields.');
-            }
-        });
-
-        // Display task-specific spending total
-        taskSelect.addEventListener('change', () => {
-            const selectedTask = taskSelect.value;
-            if (selectedTask && taskTotals[selectedTask]) {
-                taskSpending.textContent = `Total Spending on Task "${selectedTask}": ZMW ${taskTotals[selectedTask].toFixed(2)}`;
-            } else {
-                taskSpending.textContent = '';
-            }
-        });
-    </script>
 </body>
 </html>
