--- a/dashboard.html
+++ b/dashboard.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css">
     <style>
-       body {
+        body {
     font-family: 'Arial', sans-serif;
     background-color: #f8f9fa;
     margin: 0;
@@ -222,6 +222,7 @@ tr:hover {
         margin-bottom: 20px;
     }
 }
+    </style>
 </head>
 <body>
     <div class="sidebar">
@@ -242,7 +243,7 @@ tr:hover {
 
     <div class="main-content">
         <div class="header">
-            <h1>Admin Dashboard</h1>
+            <h1>PENTA CONSTRUCTION</h1>
             <div style="display: flex; align-items: center;">
                 <div class="notification" style="position: relative;">
                     <i class="fas fa-bell" id="notificationIcon" style="cursor: pointer;"></i>
