--- a/Chris.html
+++ b/Chris.html
@@ -7,7 +7,7 @@
     <title>Task Sheet</title>
     <style>
         
-       body {
+     body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
     padding: 0;
@@ -122,9 +122,18 @@ button:hover {
 }
 
 @media (max-width: 768px) {
+    .container {
+        padding: 15px;
+    }
+
     table,
     .form-container {
         font-size: 14px;
+    }
+
+    th,
+    td {
+        padding: 10px;
     }
 
     input,
@@ -132,8 +141,43 @@ button:hover {
     button {
         font-size: 14px;
     }
+
+    .toggle-button {
+        width: 100%;
+        text-align: center;
+    }
 }
-    
+
+@media (max-width: 480px) {
+    .container {
+        padding: 10px;
+    }
+
+    table,
+    .form-container {
+        font-size: 12px;
+    }
+
+    th,
+    td {
+        padding: 8px;
+    }
+
+    input,
+    select,
+    button {
+        font-size: 12px;
+    }
+
+    .toggle-button {
+        width: 100%;
+        text-align: center;
+    }
+
+    h1 {
+        font-size: 1.5rem;
+    }
+}
     </style>
     <!-- Add Firebase SDK -->
     <script type="module">
