--- a/minutes.html
+++ b/minutes.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task Sheet</title>
     <style>
-       body {
+    body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
     padding: 0;
@@ -121,15 +121,60 @@ button:hover {
 }
 
 @media (max-width: 768px) {
+    .container {
+        padding: 15px;
+    }
+
     table,
     .form-container {
         font-size: 14px;
+    }
+
+    th,
+    td {
+        padding: 10px;
     }
 
     input,
     select,
     button {
         font-size: 14px;
+    }
+
+    .toggle-button {
+        width: 100%;
+        text-align: center;
+    }
+}
+
+@media (max-width: 480px) {
+    .container {
+        padding: 10px;
+    }
+
+    table,
+    .form-container {
+        font-size: 12px;
+    }
+
+    th,
+    td {
+        padding: 8px;
+    }
+
+    input,
+    select,
+    button {
+        font-size: 12px;
+    }
+
+    .toggle-button {
+        width: 100%;
+        text-align: center;
+    }
+
+    h1 {
+        font-size: 1.5rem;
     }
 }
     </style>
