--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       justify-content: center;
       height: 100vh;
       margin: 0;
-      background: url('Photos/0268da23-3cd8-4e19-bb47-0f12210a56f4.jpg') no-repeat center center fixed;
+      background: url('Photos/CANVA.jpg') no-repeat center center fixed;
       background-size: cover;
     }
 
@@ -228,4 +228,3 @@
 
 </body>
 </html>
-
