--- a/dashboard.html
+++ b/dashboard.html
@@ -233,6 +233,7 @@ tr:hover {
             <li><a href="Resource.html"><i class="fas fa-box"></i> Material</a></li>
             <li><a href="Tasksheet.html"><i class="fas fa-tasks"></i> Tasks</a></li>
             <li><a href="Tool.html"><i class="fas fa-tools"></i> Tools</a></li>
+               <li><a href="DailyReport.html"><i class="fas fa-tasks"></i> Daily Reprot</a></li>
             <li><a href="Chris.html"><i class="fas fa-user"></i> Chris</a></li>
             <li><a href="purchases.html"><i class="fas fa-shopping-cart"></i> Purchases</a></li>
             <li><a href="minutes.html"><i class="fas fa-clock"></i> Minutes</a></li>
