--- a/index.html
+++ b/index.html
@@ -11,100 +11,136 @@
   <title>Penta Construction Login</title>
 
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      margin: 0;
-      background: url('Photos/CANVA.jpg') no-repeat center center fixed;
-      background-size: cover;
-    }
+   body {
+    font-family: Arial, sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    margin: 0;
+    background: url('Photos/CANVA.jpg') no-repeat center center fixed;
+    background-size: cover;
+}
 
-    .login-container {
-      background: rgba(8, 0, 0, 0.8);
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-      text-align: center;
-      width: 300px;
-    }
+.login-container {
+    background: rgba(8, 0, 0, 0.8);
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    width: 90%;
+    max-width: 300px;
+}
 
-    .login {
-      display: block;
-      margin: 0 auto 20px;
-      width: 150px;
+.login {
+    display: block;
+    margin: 0 auto 20px;
+    width: 150px;
+}
+
+input[type="text"], input[type="password"] {
+    width: 100%;
+    padding: 10px;
+    margin: 10px 0;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
+}
+
+.password-container {
+    position: relative;
+}
+
+.password-container input {
+    padding-right: 40px;
+}
+
+.toggle-password {
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+    cursor: pointer;
+    font-size: 1.2em;
+    color: #ccc;
+}
+
+.warning {
+    color: red;
+    margin-top: 10px;
+    display: none;
+}
+
+button {
+    display: block;
+    width: 100%;
+    padding: 10px;
+    margin-top: 10px;
+    border: none;
+    border-radius: 5px;
+    background-color: #007bff;
+    color: white;
+    font-size: 1em;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+button:hover {
+    background-color: #0056b3;
+}
+
+.penta {
+    color: white;
+}
+
+#login-attempts-container {
+    margin-top: 20px;
+    padding: 10px;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    border-radius: 5px;
+    width: 90%;
+    max-width: 300px;
+    text-align: left;
+}
+
+#login-attempts-container div {
+    margin-bottom: 10px;
+}
+
+/* Responsive Design */
+@media (max-width: 768px) {
+    .login-container, #login-attempts-container {
+        width: 100%;
+        padding: 15px;
     }
 
     input[type="text"], input[type="password"] {
-      width: 100%;
-      padding: 10px;
-      margin: 10px 0;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      box-sizing: border-box;
-    }
-
-    .password-container {
-      position: relative;
-    }
-
-    .password-container input {
-      padding-right: 40px;
-    }
-
-    .toggle-password {
-      position: absolute;
-      top: 50%;
-      right: 10px;
-      transform: translateY(-50%);
-      cursor: pointer;
-      font-size: 1.2em;
-      color: #ccc;
-    }
-
-    .warning {
-      color: red;
-      margin-top: 10px;
-      display: none;
+        font-size: 14px;
     }
 
     button {
-      display: block;
-      width: 100%;
-      padding: 10px;
-      margin-top: 10px;
-      border: none;
-      border-radius: 5px;
-      background-color: #007bff;
-      color: white;
-      font-size: 1em;
-      cursor: pointer;
+        font-size: 14px;
+        padding: 8px;
+    }
+}
+
+@media (max-width: 480px) {
+    .login-container, #login-attempts-container {
+        width: 100%;
+        padding: 10px;
     }
 
-    button:hover {
-      background-color: #0056b3;
+    input[type="text"], input[type="password"] {
+        font-size: 12px;
     }
 
-    .penta {
-      color: white;
+    button {
+        font-size: 12px;
+        padding: 8px;
     }
-
-    #login-attempts-container {
-      margin-top: 20px;
-      padding: 10px;
-      background-color: rgba(0, 0, 0, 0.5);
-      color: white;
-      border-radius: 5px;
-      width: 300px;
-      text-align: left;
-    }
-
-    #login-attempts-container div {
-      margin-bottom: 10px;
-    }
+}
   </style>
 
   <!-- Firebase SDK -->
