--- a/dashboard.html
+++ b/dashboard.html
@@ -252,7 +252,7 @@
 
 <body>
     <div class="sidebar closed">
-        <h2>IMS Portal</h2>
+        <h2> <img src="Photos/logo.png"></h2>
         <ul>
             <li><a href="employee_task_manager.html"><i class="fas fa-users"></i> Staff</a></li>
             <li><a href="DailyReport.html"><i class="fas fa-tasks"></i> Daily Report</a></li>
